# baseservice

./: .gitignore  CMakeLists.txt  build.ps1
libbaseservice/: CMakeLists.txt  basicjsonresource.cpp  basicjsonresource.h  jsonclient.cpp  jsonclient.h  jsonresource.cpp  jsonresource.h  jsonservice.cpp  jsonservice.h  serviceconfig.cpp  serviceconfig.h  servicefactory.cpp  servicefactory.h  servicelogger.cpp  servicelogger.h
libbaseservice/exception/: externalserviceexception.h  requestexception.h  serviceexception.h  validationexception.h
sampleservice/: CMakeLists.txt  main.cpp  person.cpp  person.h  personresource.cpp  personresource.h  sampleresource.cpp  sampleresource.h
